# ChangeLog for dev-libs/libisoburn
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisoburn/ChangeLog,v 1.83 2012/03/13 15:05:16 ssuominen Exp $

  13 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> libisoburn-1.1.8.ebuild:
  ppc/ppc64/x86 stable wrt #400017

  10 Mar 2012; Daniel Pielmeier <billie@gentoo.org> libisoburn-1.2.0.ebuild,
  metadata.xml:
  Introduce cdio use flag now that libcdio-0.83 is available.

  08 Feb 2012; Markus Meier <maekke@gentoo.org> libisoburn-1.1.8.ebuild:
  arm stable, bug #400017

  08 Feb 2012; Jeroen Roovers <jer@gentoo.org> libisoburn-1.1.8.ebuild:
  Stable for HPPA (bug #400017).

*libisoburn-1.2.0 (01 Feb 2012)

  01 Feb 2012; Daniel Pielmeier <billie@gentoo.org> +libisoburn-1.2.0.ebuild:
  Version bump.

  27 Jan 2012; Agostino Sarubbo <ago@gentoo.org> libisoburn-1.1.8.ebuild:
  Stable for amd64, wrt bug #400017

  25 Jan 2012; Daniel Pielmeier <billie@gentoo.org> -libisoburn-1.1.6.ebuild:
  Remove old.

*libisoburn-1.1.8 (21 Nov 2011)

  21 Nov 2011; Daniel Pielmeier <billie@gentoo.org> -libisoburn-1.1.4.ebuild,
  +libisoburn-1.1.8.ebuild:
  Version bump. Remove old.

*libisoburn-1.1.6 (18 Oct 2011)

  18 Oct 2011; Daniel Pielmeier <billie@gentoo.org> +libisoburn-1.1.6.ebuild:
  Version bump.

*libisoburn-1.1.4 (08 Aug 2011)

  08 Aug 2011; Daniel Pielmeier <billie@gentoo.org> -libisoburn-1.1.2.ebuild,
  +libisoburn-1.1.4.ebuild:
  Version bump. Remove old.

*libisoburn-1.1.2 (11 Jul 2011)

  11 Jul 2011; Daniel Pielmeier <billie@gentoo.org> -libisoburn-1.1.0.ebuild,
  +libisoburn-1.1.2.ebuild:
  Version bump. Remove old.

*libisoburn-1.1.0 (19 Jun 2011)

  19 Jun 2011; Daniel Pielmeier <billie@gentoo.org> -libisoburn-1.0.8.ebuild,
  +libisoburn-1.1.0.ebuild:
  Version bump. Remove old.

*libisoburn-1.0.8 (16 Apr 2011)

  16 Apr 2011; Daniel Pielmeier <billie@gentoo.org> -libisoburn-1.0.6.ebuild,
  +libisoburn-1.0.8.ebuild:
  Version bump. Remove old
