@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libisoburn
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisoburn/ChangeLog,v 1.83 2012/03/13 15:05:16 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisoburn/ChangeLog,v 1.84 2012/04/07 12:51:46 billie Exp $
+
+*libisoburn-1.2.2 (07 Apr 2012)
+
+  07 Apr 2012; Daniel Pielmeier <billie@gentoo.org> +libisoburn-1.2.2.ebuild:
+  Version bump.
 
   13 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> libisoburn-1.1.8.ebuild:
   ppc/ppc64/x86 stable wrt #400017
